--- a/ecommerceAngular7/src/app/shopdetails/shopdetails.component.html
+++ b/ecommerceAngular7/src/app/shopdetails/shopdetails.component.html
@@ -5,7 +5,7 @@
 
     <div class="row">
 		<div class="col-sm-7" style="margin-bottom: 20px;">
-			<h3><b>Missi Department Store</b></h3>
+			<h3><b>Missi Department Store</b> | <a routerLink="/shopdetailstwo">SHOP VIEW TWO</a></h3>
 		</div>
 		<div class="col-sm-5" *ngIf="countProduct" style="margin-bottom: 20px; text-align: right;">
 			<h5><b>{{countProduct}} Product Added &nbsp;&nbsp;&nbsp;&nbsp;</b>
